Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33920

XCB: Crash in Qt example Draggableicons

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.2.0 RC1
    • 5.1.0
    • GUI: Drag and Drop
    • None
    • Ubuntu 12.04
    • 7c1b39705c3a3194e55da50f9f4d2e26d2e0bf32

    Description

      Follow these steps to repeat how the program crash.
      1. drag a icon outside the widget .
      2. spinning the mouse with the icon fast (outside the widget on the desktop).
      3. release it suddenly when spinning .
      Then the program would crash .

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            lwz lwz
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes